# weco-python

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  release.yml
api/api/: index.html
api/client/: index.html
api/functional/: index.html
contributing/: index.html
cookbook/cookbook/: index.html
docs/: contributing.md  index.md
docs/api/: api.md  client.md  functional.md
docs/cookbook/: cookbook.md
docs/getting_started/: installation.md  introduction.md
examples/: cookbook.ipynb
getting_started/installation/: index.html
getting_started/introduction/: index.html
search/: search_index.json
tests/: asynchronous.py  batching.py  synchronous.py  test_asynchronous.py  test_batching.py  test_reasoning.py  test_synchronous.py
weco/: __init__.py  client.py  constants.py  functional.py  utils.py
